CRUD. Added Delete functionality.

--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -8,7 +8,9 @@
 <body>
   <h1><%= campground.title  %></h1>
   <h2><%= campground.location  %></h2>
-
+<form action="/campgrounds/<%= campground._id  %>?_method=delete" method="POST">
+<button>DELETE ME</button>
+</form>
 <footer>
   <a href="/campgrounds/<%= campground._id %>/edit">Edit</a>
   <a href="/campgrounds">All campgrounds</a>
