--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Edit Campground</title>
-</head>
-<body>
+<% layout('layouts/boilerplate')%>
   <h1>Edit campground</h1>
   <form action="/campgrounds/<%= campground._id %>?_method=PUT" method="POST">
     <div>
@@ -19,5 +12,3 @@
     <button>Update campground</button>
   </form>
   <a href="/campgrounds/<%= campground._id %>">Back to campground</a>
-</body>
-</html>
