--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Show</title>
-</head>
-<body>
+<% layout('layouts/boilerplate')%>
+
   <h1><%= campground.title  %></h1>
   <h2><%= campground.location  %></h2>
 <form action="/campgrounds/<%= campground._id  %>?_method=delete" method="POST">
@@ -15,5 +9,3 @@
   <a href="/campgrounds/<%= campground._id %>/edit">Edit</a>
   <a href="/campgrounds">All campgrounds</a>
 </footer>
-</body>
-</html>
