--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -2,6 +2,8 @@
 
   <h1><%= campground.title  %></h1>
   <h2><%= campground.location  %></h2>
+  <img src="<%= campground.image  %>" alt="">
+  <p><%= campground.description %></p>
 <form action="/campgrounds/<%= campground._id  %>?_method=delete" method="POST">
 <button>DELETE ME</button>
 </form>
