--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,5 +1,26 @@
 <% layout('layouts/boilerplate')%>
 
+<div class="row">
+  <div class="col-6 offset-3">
+    <div class="card">
+      <img class="card-img-top" src="<%= campground.image  %>" alt="Card image cap">
+      <div class="card-body">
+        <h5 class="card-title"><%= campground.title  %></h5>
+        <p class="card-text"><%= campground.description  %>.</p>
+      </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item text-muted"><%= campground.location  %></li>
+        <li class="list-group-item">$<%= campground.price  %>/night</li>
+        <li class="list-group-item">Vestibulum at eros</li>
+      </ul>
+      <div class="card-body">
+        <a href="#" class="card-link">Card link</a>
+        <a href="#" class="card-link">Another link</a>
+      </div>
+    </div>
+  </div>
+</div>
+
   <h1><%= campground.title  %></h1>
   <h2><%= campground.location  %></h2>
   <img src="<%= campground.image  %>" alt="">
