--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -21,8 +21,20 @@
     </div>
     <div class="card-footer text-muted">
       2 days ago
-      <a href="/campgrounds">All campgrounds</a>
+      <!-- <a href="/campgrounds">All campgrounds</a> -->
     </div>
+    <h2>Leave a review</h2>
+    <form action="" class="mb-3">
+      <div class="mb-3">
+        <label class="form-label" for="rating">Rating</label>
+        <input class="form-range" type="range" name="review[rating]" id="rating" min="1" max="5">
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="body">Review</label>
+        <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3"></textarea>
+      </div>
+      <button class="btn-success">Submit</button>
+    </form>
   </div>
 </div>
 
