--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -24,7 +24,8 @@
       <!-- <a href="/campgrounds">All campgrounds</a> -->
     </div>
     <h2>Leave a review</h2>
-    <form action="" class="mb-3">
+    <!-- form section -->
+    <form action="/campgrounds/<%= campground._id  %>/reviews" class="mb-3" method="POST">
       <div class="mb-3">
         <label class="form-label" for="rating">Rating</label>
         <input class="form-range" type="range" name="review[rating]" id="rating" min="1" max="5">
