--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -25,14 +25,15 @@
     </div>
     <h2>Leave a review</h2>
     <!-- form section -->
-    <form action="/campgrounds/<%= campground._id  %>/reviews" class="mb-3" method="POST">
+    <form action="/campgrounds/<%= campground._id  %>/reviews" class="mb-3 validated-form" method="POST" novalidate>
       <div class="mb-3">
         <label class="form-label" for="rating">Rating</label>
         <input class="form-range" type="range" name="review[rating]" id="rating" min="1" max="5">
       </div>
       <div class="mb-3">
         <label class="form-label" for="body">Review</label>
-        <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3"></textarea>
+        <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3" required></textarea>
+        <div class="valid-feedback">Looks good!</div>
       </div>
       <button class="btn-success">Submit</button>
     </form>
