--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -37,6 +37,12 @@
       </div>
       <button class="btn-success">Submit</button>
     </form>
+    <% for(let review of campground.reviews) {  %>
+    <div class="mb-3">
+      <p>Rating: <%= review.rating %></p>
+      <p>Review: <%= review.body %></p>
+    </div>
+    <% } %>
   </div>
 </div>
 
