--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,49 +1,82 @@
 <% layout('layouts/boilerplate')%>
 
 <div class="row">
-  <div class="col-6 offset-3">
+  <div class="col-6">
     <div class="card mb-3">
-      <img class="card-img-top" src="<%= campground.image  %>" alt="Card image cap">
+      <img
+        class="card-img-top"
+        src="<%= campground.image  %>"
+        alt="Card image cap"
+      />
       <div class="card-body">
-        <h5 class="card-title"><%= campground.title  %></h5>
-        <p class="card-text"><%= campground.description  %>.</p>
+        <h5 class="card-title"><%= campground.title %></h5>
+        <p class="card-text"><%= campground.description %>.</p>
       </div>
       <ul class="list-group list-group-flush">
-        <li class="list-group-item text-muted"><%= campground.location  %></li>
-        <li class="list-group-item">$<%= campground.price  %>/night</li>
+        <li class="list-group-item text-muted"><%= campground.location %></li>
+        <li class="list-group-item">$<%= campground.price %>/night</li>
       </ul>
       <div class="card-body">
-        <a class="card-link btn btn-info" href="/campgrounds/<%= campground._id %>/edit">Edit</a>
-        <form class="d-inline" action="/campgrounds/<%= campground._id  %>?_method=delete" method="POST">
+        <a
+          class="card-link btn btn-info"
+          href="/campgrounds/<%= campground._id %>/edit"
+          >Edit</a
+        >
+        <form
+          class="d-inline"
+          action="/campgrounds/<%= campground._id  %>?_method=delete"
+          method="POST"
+        >
           <button class="btn btn-danger">Delete</button>
-          </form>
+        </form>
       </div>
     </div>
     <div class="card-footer text-muted">
       2 days ago
       <!-- <a href="/campgrounds">All campgrounds</a> -->
     </div>
+  </div>
+  <div class="col-6">
     <h2>Leave a review</h2>
     <!-- form section -->
-    <form action="/campgrounds/<%= campground._id  %>/reviews" class="mb-3 validated-form" method="POST" novalidate>
+    <form
+      action="/campgrounds/<%= campground._id  %>/reviews"
+      class="mb-3 validated-form"
+      method="POST"
+      novalidate
+    >
       <div class="mb-3">
         <label class="form-label" for="rating">Rating</label>
-        <input class="form-range" type="range" name="review[rating]" id="rating" min="1" max="5">
+        <input
+          class="form-range"
+          type="range"
+          name="review[rating]"
+          id="rating"
+          min="1"
+          max="5"
+        />
       </div>
       <div class="mb-3">
         <label class="form-label" for="body">Review</label>
-        <textarea class="form-control" name="review[body]" id="body" cols="30" rows="3" required></textarea>
+        <textarea
+          class="form-control"
+          name="review[body]"
+          id="body"
+          cols="30"
+          rows="3"
+          required
+        ></textarea>
         <div class="valid-feedback">Looks good!</div>
       </div>
       <button class="btn-success">Submit</button>
     </form>
-    <% for(let review of campground.reviews) {  %>
-    <div class="mb-3">
-      <p>Rating: <%= review.rating %></p>
-      <p>Review: <%= review.body %></p>
+    <% for(let review of campground.reviews) { %>
+    <div class="card mb-3 outline">
+      <div class="card-body">
+        <h5 class="card-title">Rating: <%= review.rating %></h5>
+        <p class="card-text">Review: <%= review.body %>.</p>
+      </div>
     </div>
     <% } %>
   </div>
 </div>
-
-
