--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -9,5 +9,10 @@
       <a class="nav-item nav-link" href="/campgrounds">Campgrounds</a>
       <a class="nav-item nav-link" href="/campgrounds/new">New campground</a>
     </div>
+    <div class="navbar-nav ml-auto">
+      <a href="/login" class="nav-link">Login</a>
+      <a href="/register" class="nav-link">Register</a>
+      <a href="/logout" class="nav-link">Logout</a>
+    </div>
   </div>
 </nav>
