--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="/campgrounds">YelpCamp</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup">
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarNavAltMarkup"
+    aria-controls="navbarNavAltMarkup"
+  >
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -10,9 +16,12 @@
       <a class="nav-item nav-link" href="/campgrounds/new">New campground</a>
     </div>
     <div class="navbar-nav ml-auto">
+      <% if(!currentUser) { %>
       <a href="/login" class="nav-link">Login</a>
       <a href="/register" class="nav-link">Register</a>
+      <% } else {%>
       <a href="/logout" class="nav-link">Logout</a>
+      <% } %>
     </div>
   </div>
 </nav>
