added user authorization to edit or delete campground if logged in into app

--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -17,6 +17,7 @@
         <li class="list-group-item">Submitted by <%= campground.author.username %></li>
         <li class="list-group-item">$<%= campground.price %>/night</li>
       </ul>
+      <% if(currentUser && campground.author.equals(currentUser._id)){ %>
       <div class="card-body">
         <a
           class="card-link btn btn-info"
@@ -31,6 +32,7 @@
           <button class="btn btn-danger">Delete</button>
         </form>
       </div>
+      <% } %>
     </div>
     <div class="card-footer text-muted">
       2 days ago
