--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -7,6 +7,7 @@
     method="POST"
     class="validated-form"
     novalidate
+    enctype="multipart/form-data"
   >
     <div class="mb-3">
       <label class="form-label" for="title">Title</label>
@@ -33,16 +34,8 @@
       <div class="valid-feedback">Looks good!</div>
     </div>
     <div class="mb-3">
-      <label class="form-label" for="image">Image Url</label>
-      <input
-        class="form-control"
-        type="text"
-        id="image"
-        name="campground[image]"
-        value="<%= campground.image %>"
-        required
-      />
-      <div class="valid-feedback">Looks good!</div>
+      <label class="form-label" for="image">Add images</label>
+      <input type="file" name="image" id="image" multiple>
     </div>
     <div class="mb-3">
       <label class="form-label" for="price">Campground Price</label>
