--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -38,11 +38,11 @@
   <% if(campground.images.length > 1) {%>
   <a class="carousel-control-prev" href="#campgroundCarousel" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <!-- <span class="sr-only">Previous</span> -->
+      <span class="sr-only">Previous</span>
   </a>
   <a class="carousel-control-next" href="#campgroundCarousel" role="button" data-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <!-- <span class="sr-only">Next</span> -->
+      <span class="sr-only">Next</span>
   </a>
   <% } %>
 </div>
