--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -25,7 +25,6 @@
         />
         <div class="valid-feedback">Looks good!</div>
       </div>
-      <input type="file" name="image" id="" multiple>
       <!-- <div class="mb-3">
         <label class="form-label" for="image">Image Url</label>
         <input class="form-control" type="text" id="image"
@@ -61,6 +60,12 @@
         ></textarea>
         <div class="valid-feedback">Looks good!</div>
       </div>
+
+      <div class="mb-3 form-file custom-file">
+        <label for="images" class="form-label custom-file-label">Choose image(s)...</label>
+        <input class="form-control" type="file" id="images" name="image" multiple>
+      </div>
+
       <div class="mb-3">
         <button class="btn btn-success">Add Campground</button>
       </div>
