--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -7,7 +7,8 @@
 <div class="card mb-3">
   <div class="row">
     <div class="col-md-4">
-      <img class="img-fluid" src="<%= campground.images[1].url %>" alt="" />
+      <!-- Here is where it will show in the homepage whether there is an image uploaded to cloudinary to render it. if there is none it will show an error. so make sure there is an image uploaded -->
+      <img class="img-fluid" src="<%= campground.images[0].url %>" alt="" />
     </div>
     <div class="col-md-8">
       <div class="card-body">
