--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -3,49 +3,36 @@
 
 <div class="row">
   <div class="col-6">
-    <!-- carousel -->
-     
-     <!-- Old way -->
-    
-     <!-- <div id="campgrounCarousel" class="carousel slide" data-bs-ride="carousel">
+    <div id="map" style="width: 400px; height: 300px"></div>
+    <div id="campgroundCarousel" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner">
-        <% campground.images.forEach((img, i) => {  %>
-          <div class="carousel-item <%= i === 0 ? 'active' : ''%>">
-              <img src="<%= img.url%>" class="d-block w-100" alt="">
-          </div>
-          <% }) %>
+        <% campground.images.forEach((img, i) => { %>
+        <div class="carousel-item <%= i === 0 ? 'active' : ''%>">
+          <img src="<%= img.url%>" class="d-block w-100" alt="" />
+        </div>
+        <% }) %>
       </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <% if(campground.images.length > 1) {%>
+      <a
+        class="carousel-control-prev"
+        href="#campgroundCarousel"
+        role="button"
+        data-slide="prev"
+      >
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+        <span class="sr-only">Previous</span>
+      </a>
+      <a
+        class="carousel-control-next"
+        href="#campgroundCarousel"
+        role="button"
+        data-slide="next"
+      >
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div> -->
-
-<!-- New way -->
-<div id="campgroundCarousel" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-      <% campground.images.forEach((img, i) => {  %>
-      <div class="carousel-item <%= i === 0 ? 'active' : ''%>">
-          <img src="<%= img.url%>" class="d-block w-100" alt="">
-      </div>
-      <% }) %>
-
-  </div>
-  <% if(campground.images.length > 1) {%>
-  <a class="carousel-control-prev" href="#campgroundCarousel" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#campgroundCarousel" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-  </a>
-  <% } %>
-</div>
+        <span class="sr-only">Next</span>
+      </a>
+      <% } %>
+    </div>
 
     <div class="card mb-3">
       <div class="card-body">
@@ -170,3 +157,9 @@
     <% } %>
   </div>
 </div>
+<script>
+  const mapToken = '<%- process.env.MAPBOX_TOKEN %>';
+  const campground = <%- JSON.stringify(campground) %>;
+</script>
+
+<script src="/javascripts/showPageMap.js"></script>
